# enar_montecarlo

./: .gitignore  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/run/: SKILL.md
src/enar_montecarlo/: __init__.py  __main__.py  events.py  halt.py  lifecycle.py  registry.py  seeding.py
src/enar_montecarlo/cli/: main.py  progress.py
src/enar_montecarlo/cli/commands/: info.py  list_runs.py  purge.py  run.py  sync.py  template.py  validate.py
src/enar_montecarlo/persistence/: files.py  schema.py  sessions.py  sync.py  values.py  writes.py
src/enar_montecarlo/utils/: always_translator.py  jsonl.py  path_resolver.py
tests/integration/: test_cli_scaffold.py  test_echo_sim_fixture.py  test_echo_sim_subprocess.py  test_execute_run.py  test_halt_propagation.py  test_info_cmd.py  test_list_runs_cmd.py  test_progress_json.py  test_progress_quiet.py  test_progress_text.py  test_purge_cmd.py  test_run_cmd.py  test_run_end_to_end.py  test_sync_cmd.py  test_template_cmd.py  test_validate_cmd.py
tests/integration/fixtures/echo_sim/: __init__.py  __main__.py  attackers.yaml  defenders.yaml
tests/persistence/: conftest.py  test_files.py  test_schema.py  test_sessions.py  test_sync.py  test_values.py  test_writes_events.py  test_writes_runs.py
tests/smoke/: test_post_run_db.py
tests/unit/: test_always_translator.py  test_default_hooks.py  test_events.py  test_jsonl.py  test_lifecycle.py  test_load_data_file.py  test_path_resolver.py  test_registry.py  test_run_args.py  test_seeding.py
