[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enar_montecarlo"
version = "0.1.0"
description = "Monte Carlo simulation framework for tabletop RPG combat experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "pyyaml",
    "rich",
    "click",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]"]
docker = ["docker"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enar_montecarlo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/enar_montecarlo"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/enar_montecarlo"]
