[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enar_montecarlo"
version = "0.1.0"
description = "Monte Carlo simulation framework for tabletop RPG combat experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "pyyaml",
    "rich",
    "click",
]

[project.optional-dependencies]
# psycopg-binary is listed explicitly (not via the ``psycopg[binary]``
# extra) because some pip resolutions on Python 3.13 / Windows have
# been observed to install only ``psycopg`` core without the binary
# backend, leaving ``import psycopg`` to fail at runtime with
# "no pq wrapper available". Listing the package directly makes the
# resolver fail loudly if no wheel is available rather than silently
# producing a half-broken install.
postgres = ["psycopg>=3.2", "psycopg-binary>=3.2"]
docker = ["docker"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-PyYAML",
    # Same explicit pair so a single ``pip install -e .[dev]`` produces
    # a test environment that can exercise POSTGRES_TEST_URL-gated
    # tests when the env var is set.
    "psycopg>=3.2",
    "psycopg-binary>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enar_montecarlo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/enar_montecarlo"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/enar_montecarlo"]
